test/errors/constants_error/zs/wrong_float_constant_error.zs
package wrong_float_constant_error;

const float16 WRONG_FLOAT_CONSTANT = "wrong";
